--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   hooks_riverpod: ^2.5.1
   flutter_screenutil: ^5.9.3
+  percent_indicator: ^4.2.3
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
