--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_screenutil: ^5.9.3
   percent_indicator: ^4.2.3
   fl_chart: ^0.70.2
+  dio: ^5.4.0
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
