--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_URI=postgres://neondb_owner:npg_12XmJGUwsbuN@ep-wild-fog-a1kuaczi-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+BASE_URL_PROD=https://www.fitcount.id
+BASE_URL=http://127.0.0.1:3000
